--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "element-plus": "^2.2.27",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
